--- a/Regression Analysis/readme
+++ b/Regression Analysis/readme
@@ -1,1 +1,1 @@
-
+Our Aim here is to predict the treatment cost of Patient admitted in the hospital so that mangement can better paln for Package services 
